--- a/templates/crop.html
+++ b/templates/crop.html
@@ -51,12 +51,12 @@
     </div>
 
     <div class="form-group">
-      <label for="Pottasium" style="font-size: 17px"><b>Pottasium</b></label>
+      <label for="Potassium" style="font-size: 17px"><b>Pottasium</b></label>
       <input
         type="number"
         class="form-control"
-        id="Pottasium"
-        name="pottasium"
+        id="Potassium"
+        name="potassium"
         placeholder="Enter the value (example:50)"
         style="font-weight: bold"
         required
